--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,13 @@ h1{
   margin: 0;
   text-transform: uppercase;
 }
+h3{
+  padding: 5px;
+  text-align: center;
+  background: #9f9fc4;
+  color: white;
+  margin: 0;
+}
 input{
   width: 100%;
   box-sizing: border-box;
